tests/parser_cases/invalid/operator_div_missing_rhs.ob0
(* INVALID: DIV operator is missing the right-hand operand *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x := 7 DIV
END Main.
